[package]
name = "pgn_parser"
version = "0.2.1"
edition = "2021"
authors = ["Illia Shevchyk"]
description = "Parser for educational purpose"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
pest_generator = "2.7.5"

